<resources>
    <string name="app_name">DarokhanehApp</string>

    <string name="phone">شماره تلفن</string>
    <string name="password">رمز عبور</string>
    <string name="forget">رمز خود را فراموش کرده اید؟</string>
    <string name="name">نام کامل</string>
    <string name="email">ایمیل</string>
    <string name="text">لطفا چیزی بنویسید</string>
    <string name="hint_minute">Minute</string>
    <string name="message_minutes">Please Enter Minutes...</string>
</resources>
